--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -489,16 +489,13 @@ We recently published a technical report\footnote{\label{technical-report-1}Avai
 to validate tabular data (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), and thesauri (\emph{SKOS}).
 By applying the proposed classification system to several vocabularies to represent both metadata and data, we prove its generality \cite{BoschZapilkoWackerowEckert2015}.
 
-\tb{Depending on individual use cases, validation environments should enable users to select which constraints to validate against.
-For some use cases, validating $\mathcal{CT}_{B}$ constraints may be more important than validating $\mathcal{CT}_{S}$ or $\mathcal{CT}_{C}$ constraints.}
-
 \subsection{Classification of Constraint Types}
 
 The complete set of \emph{constraint types} ($\mathcal{CT}$) encompasses three disjoint \emph{sets of constraint types}:
 \begin{enumerate}
-	\item \textbf{$\mathcal{CT}_{B}$: \emph{Basic Constraint Types}}
-	\item \textbf{$\mathcal{CT}_{S}$: \emph{Simple Constraint Types}}
-	\item \textbf{$\mathcal{CT}_{C}$: \emph{Complex Constraint Types}}
+	\item $\mathcal{CT}_{B}$: \textbf{\emph{Basic Constraint Types}}
+	\item $\mathcal{CT}_{S}$: \textbf{\emph{Simple Constraint Types}}
+	\item $\mathcal{CT}_{C}$: \textbf{\emph{Complex Constraint Types}}
 \end{enumerate}
 
 The modeling languages \emph{RDF}, \emph{RDFS}, and \emph{OWL} are typically used to define vocabularies.
@@ -510,7 +507,7 @@ As vocabularies have been specified using \emph{RDF}, \emph{RDFS}, and \emph{OWL
 %The {\em existential quantification} (\emph{R-86}) 
 %\ms{Study $\equiv$ $\exists$ product.LogicalDataSet} (\emph{DL}), e.g., restricts studies to contain at least one data set which is expressible in OWL 2:
 \emph{Minimum qualified cardinality restrictions} (\emph{R-74}), e.g., guarantee that individuals of given classes are connected by particular properties to at least n different individuals/literals of certain classes or data ranges.
-This way, it is expressible in OWL 2 that a \emph{phdd:TableStructure} has (\emph{phdd:column}) at least one \emph{phdd:Column}:
+This way, it is expressible in \emph{OWL 2} that a \emph{phdd:TableStructure} has (\emph{phdd:column}) at least one \emph{phdd:Column}:
 \begin{ex}
 [   a owl:Restriction ; rdfs:subClassOf TableStructure ;
     owl:minQualifiedCardinality 1 ;
@@ -519,16 +516,14 @@ This way, it is expressible in OWL 2 that a \emph{phdd:TableStructure} has (\emp
 \end{ex}
 
 \emph{Simple constraint types} ($\mathcal{CT}_{S}$) is the set of constraint types whose constraints can be easily defined without much effort in addition to $\mathcal{CT}_{B}$ constraints.
-The {\emph{data property facets} (\emph{R-46}) $\mathcal{CT}_{S}$ constraint type enables to declare frequently needed facets for data properties in order to validate input against simple conditions including min/max values, regular expressions, and string length.
+{\emph{Data property facets} (\emph{R-46}) is an example of an $\mathcal{CT}_{S}$ constraint type which enables to declare frequently needed facets for data properties in order to validate input against simple conditions including min/max values, regular expressions, and string length.
 The abstract of series/studies, e.g., should have a minimum length ($\mathcal{SL}_{1}$).
 
 \emph{Complex constraint types} ($\mathcal{CT}_{C}$) encompass constraint types for which the definition of constraints is rather complex and cannot be derived from vocabulary definitions.
-Complex constraints show the importance of constraint languages enabling to describe complex constraints.
+Complex constraints show the importance of constraint languages enabling to describe more complex constraints.
 For assessing the quality of thesauri, e.g., we concentrate on the graph-based structure and apply graph- and network-analysis techniques.
-An example of such \emph{structure} constraints is that 
+An example of such constraints of the constraint type \emph{structure} is that 
 a thesaurus should not contain many orphan concepts, i.e., concepts without any associative or hierarchical relations, lacking context information valuable for search.  
-
-\tb{refer to evaluation / what do we want to know?} 
 
 \subsection{Classification of Constraints}
 
@@ -551,6 +546,12 @@ default severity levels of $\mathcal{CT}_{B}$ constraints are in most cases very
 in average stronger than severity levels of $\mathcal{CT}_{S}$ and $\mathcal{CT}_{C}$ constraints.
 As a consequence, violating many $\mathcal{CT}_{B}$ constraints is an indicator for bad data quality\footnote{For simplicity reasons, we only assign severity levels to $\mathcal{CT}_{B}$ constraints when they differ from $\mathcal{SL}_{2}$.}.
 
+Validation environments should enable users to select which constraints to validate against depending on their individual use cases.
+For some use cases, 
+validating constraints of $\mathcal{CT}_{B}$ constraint types may be more important than validating constraints of $\mathcal{CT}_{S}$ or $\mathcal{CT}_{C}$ constraint types.
+For other use cases,
+validating $\mathcal{SL}_{2}$ constraints may be sufficient without taking $\mathcal{SL}_{1}$ and $\mathcal{SL}_{0}$ constraints into account.
+\tb{refer to evaluation / what do we want to know?} 
 %
 %- different sets of constraints for different use cases / use case specific constraints
 %
