--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -551,7 +551,10 @@ For some use cases,
 validating constraints of $\mathcal{CT}_{B}$ constraint types may be more important than validating constraints of $\mathcal{CT}_{S}$ or $\mathcal{CT}_{C}$ constraint types.
 For other use cases,
 validating $\mathcal{SL}_{2}$ constraints may be sufficient without taking $\mathcal{SL}_{1}$ and $\mathcal{SL}_{0}$ constraints into account.
-\tb{refer to evaluation / what do we want to know?} 
+We evaluate a huge amount of metadata and data represented by multiple vocabularies to get an understanding 
+(1) which sets of constraint types and 
+(2) which sets of constraints (associated with particular severity levels) encompass the most/fewest violated constraints (see section \ref{evaluation}).
+
 %
 %- different sets of constraints for different use cases / use case specific constraints
 %
