--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -539,13 +539,12 @@ Violations of $\mathcal{SL}_{0}$ constraints point to desirable data improvement
 Data not conforming to $\mathcal{SL}_{1}$ and $\mathcal{SL}_{2}$ constraints is syntactically and/or semantically not correctly represented.
 The difference between $\mathcal{SL}_{1}$ and $\mathcal{SL}_{2}$ constraints is that data, not conforming to $\mathcal{SL}_{1}$ but conforming to $\mathcal{SL}_{2}$ constraints, could be processed further,
 whereas data, not corresponding to $\mathcal{SL}_{2}$ constraints, cannot be processed further after validation. 
+As constraints of $\mathcal{CT}_{B}$ constraint types are derived from explicitly stated semantics of vocabularies, 
+their default severity levels are in most cases very strong ($\mathcal{SL}_{2}$) and 
+in average stronger than the severity levels of constraints assigned to $\mathcal{CT}_{S}$ and $\mathcal{CT}_{C}$ constraint types.
+As a consequence, violating many constraints of $\mathcal{CT}_{B}$ constraint types is an indicator for bad (meta)data quality\footnote{For simplicity reasons, we only assign severity levels to $\mathcal{CT}_{B}$ constraints in this paper in case they differ from $\mathcal{SL}_{2}$.}.
+
 Although, we provide default severity levels for each constraint, validation environments should enable users to adapt constraints' severity levels according to their individual needs.
-
-As $\mathcal{CT}_{B}$ constraints are derived from explicitly stated semantics of vocabularies' data models, 
-default severity levels of $\mathcal{CT}_{B}$ constraints are in most cases very strong ($\mathcal{SL}_{2}$) and 
-in average stronger than severity levels of $\mathcal{CT}_{S}$ and $\mathcal{CT}_{C}$ constraints.
-As a consequence, violating many $\mathcal{CT}_{B}$ constraints is an indicator for bad data quality\footnote{For simplicity reasons, we only assign severity levels to $\mathcal{CT}_{B}$ constraints when they differ from $\mathcal{SL}_{2}$.}.
-
 Validation environments should enable users to select which constraints to validate against depending on their individual use cases.
 For some use cases, 
 validating constraints of $\mathcal{CT}_{B}$ constraint types may be more important than validating constraints of $\mathcal{CT}_{S}$ or $\mathcal{CT}_{C}$ constraint types.
